seed_error.txt
C:\Users\DELL\OneDrive\Desktop\aelbd\garments-buying-house\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
prisma/seed.ts(158,95): error TS2561: Object literal may only specify known properties, but 'active' does not exist in type 'MenuItemCreateManyInput'. Did you mean to write 'isActive'?
prisma/seed.ts(160,108): error TS2561: Object literal may only specify known properties, but 'active' does not exist in type 'MenuItemCreateManyInput'. Did you mean to write 'isActive'?
prisma/seed.ts(169,104): error TS2561: Object literal may only specify known properties, but 'active' does not exist in type 'MenuItemCreateManyInput'. Did you mean to write 'isActive'?
prisma/seed.ts(170,105): error TS2561: Object literal may only specify known properties, but 'active' does not exist in type 'MenuItemCreateManyInput'. Did you mean to write 'isActive'?

    at createTSError (C:\Users\DELL\OneDrive\Desktop\aelbd\garments-buying-house\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\DELL\OneDrive\Desktop\aelbd\garments-buying-house\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\DELL\OneDrive\Desktop\aelbd\garments-buying-house\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\DELL\OneDrive\Desktop\aelbd\garments-buying-house\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\DELL\OneDrive\Desktop\aelbd\garments-buying-house\node_modules\ts-node\src\index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1613:10)
    at Object.require.extensions.<computed> [as .ts] (C:\Users\DELL\OneDrive\Desktop\aelbd\garments-buying-house\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1275:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1096:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:164:12) {
  diagnosticCodes: [ 2561, 2561, 2561, 2561 ]
}
